[project]
name = "journal-verifier"
version = "0.1.0"
description = "Validate journal.md structure and coverage"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
journal-verifier = "journal_verifier.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
